# walter-uc

./: .gitignore  CMakeLists.txt  DESIGN.md  Kconfig  README.md  idf_component.yml
.github/workflows/: discord-release-announcement.yml
examples/bluecherry/: CMakeLists.txt  README.md
examples/bluecherry/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/bluecherry/main/credentials/: devcert.pem  devkey.pem
examples/mqtt/: CMakeLists.txt  README.md
examples/mqtt/main/: CMakeLists.txt  main.cpp
examples/udp-socket/: CMakeLists.txt
examples/udp-socket/main/: idf_component.yml  main.cpp
src/: uc.cpp  uc.hpp  utils.h
src/bsp/: bsp.hpp  walter.hpp
src/driver/: cellularDriver.hpp  driver.hpp  wifiDriver.hpp
src/driver/espWifi/: espWifi.cpp  espWifi.hpp
src/driver/sequansGM02S/: gm02s.cpp  gm02s.hpp
test/config-test/: CMakeLists.txt  sdkconfig.defaults
test/config-test/main/: CMakeLists.txt  test_config.cpp
test/connection-manager-test/main/: CMakeLists.txt  idf_component.yml  test_connection_manager.cpp
